fixed perspective under z-index

--- a/source/assets/css/tim.css
+++ b/source/assets/css/tim.css
@@ -582,14 +582,14 @@ body.blog {
 /* Blog Jumbotron */
 .blog .jumbotron {
     position: relative;
-    perspective: 1000px;
+    perspective: 2000px;
     /*overflow: hidden;*/
     padding-top: 64px;
     background-color: #1bbc9b;
 }
 .blog .jumbotron {
-    padding-right: 48px;
-    padding-left: 48px;
+    padding-right: 16px;
+    padding-left: 16px;
 }
 
 .blog  .jumbotron h1, .jumbotron .h1,
@@ -607,7 +607,6 @@ body.blog {
 .blog .jumbotron header {
     position: absolute;
     transform-origin: 33% 50%;
-    z-index: 1000;
 }
 .blog .jumbotron header * {
     transform-origin: 33% 50%;
@@ -643,8 +642,11 @@ body.blog {
     animation: introOut 768ms ease-in-out 0ms 1 both;
 }
 .blog #postpage {
-    animation: introDn 1024ms ease-in-out 768ms 1 both;
+    animation: introDn 768ms ease-in-out 1024ms 1 both;
 }
+
+.blog .jumbotron header { animation: addZIndex 1ms ease-in-out 1024ms 1 both;}
+
 .blog .jumbotron header *:nth-child(1) { animation: tilt 1024ms ease-in-out 128ms 1 both;}
 .blog .jumbotron header *:nth-child(2) { animation: tilt 1024ms ease-in-out 256ms 1 both;}
 .blog .jumbotron header *:nth-child(3) { animation: tilt 1024ms ease-in-out 512ms 1 both;}
@@ -657,6 +659,9 @@ body.blog {
 .blog .jumbotron .post-group-lists ul:nth-child(2) { animation: introDnInRot 1024ms ease-in-out  768ms 1 both;}
 .blog .jumbotron .post-group-lists ul:nth-child(3) { animation: introDnInRot 1024ms ease-in-out 1024ms 1 both;}
 
+@keyframes addZIndex {
+    100% {z-index: 100;}
+}
 @keyframes introDnIn {
     0%   {opacity: 0; transform: scale(1.3) translateY(-64px);}
     100% {opacity: 1; transform: scale(1.0) translateY(  0px);}
